[package]
name = "zwo_asi_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "zwo_asi_rs"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
bytes = "1.9.0"
futures = "0.3.31"
futures-util = "0.3.31"
image = "0.25.5"
imageproc = { version = "0.25.0", features = ["display-window", "sdl2"] }
libc = "0.2"
opencv = { version = "0.93.5", default-features = false, features = [
    "photo",
    "imgcodecs",
    "imgproc",
    "highgui",
    "clang-runtime",
] }
plotters = "0.3.7"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
serde_repr = "0.1.19"
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
bindgen = { version = "0.71.0" }
